# llm-eval-harness

./: README.md  pyproject.toml
.github/workflows/: eval.yml
src/metrics/: generation.py  retrieval.py
src/runners/: judge.py  offline.py
src/runners/prompts/: faithfulness.txt  relevance.txt
