[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Production LLM evaluation framework: retrieval metrics, LLM-as-judge, CI regression gate"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.36.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
